--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -12,7 +12,8 @@ table, caption, tbody, tfoot, thead, tr, th, td {
     font-style: inherit; 
     font-size: 100%; 
     font-family: inherit; 
-    vertical-align: baseline; 
+    vertical-align: baseline;
+    box-sizing: border-box; 
 } 
 :focus {
     outline: 0;
