--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -1,3 +1,34 @@
-// html {
-//   color: blue;
-// }
+/*   rem 移动端   */
+html {
+    font-size : 20px;
+}
+@media only screen and (min-width: 401px){
+    html {
+        font-size: 25px !important;
+    }
+}
+@media only screen and (min-width: 428px){
+    html {
+        font-size: 26.75px !important;
+    }
+}
+@media only screen and (min-width: 481px){
+    html {
+        font-size: 30px !important; 
+    }
+}
+@media only screen and (min-width: 569px){
+    html {
+        font-size: 35px !important; 
+    }
+}
+@media only screen and (min-width: 641px){
+    html {
+        font-size: 40px !important; 
+    }
+}
+
+// 全局 box-sizing 布局？
+div {
+    box-sizing: border-box;
+}
