--- a/src/assets/css/style.less
+++ b/src/assets/css/style.less
@@ -1,3 +1,5 @@
 @import url('./base.less'); 
 @import url('./reset.css');
 // @import url('./iconfont.css'); // 最终决定静态引入了，再见
+@import url('./mixin.less');
+@import url('./variable.less');
